added the final text

--- a/assets/projects/js-projects/Typewriting/index.html
+++ b/assets/projects/js-projects/Typewriting/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Avery Learns to typewrite</title>
+		<title>glitchedGoose() | Learn to typewrite</title>
 		
 		<style>
 			* {
@@ -100,7 +100,7 @@
 		</style>
 	</head>
 	<body>
-		<h1 class="title">Avery's imaculate indescribably<br> spectacular typewriting trainer</h1>
+		<h1 class="title">glitchedGoose()'s imaculate <br>indescribably spectacular typewriting trainer</h1>
 		
 		<div class="container">
 			<div class="typethiscon">
