--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
       </div>
     </section>
     
-    <main style="margin-top: 100px;">
+    <main style="margin-top: calc(var(--nav-height) + 50px);">
       <div class="card card-vertical">
         <h2>My projects<span>,</span></h2>
         
