--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="img"><img src="./assets/laptop-code-solid.svg"/></div>
       <div class="card">
         <h2>Hello<span>,</span></h2>
-        <p>This is my website and where I post most of the things I code. I develop games, websites, and have been at it for several years.<br><br>To navigate the website use the buttons in the op right of the screen. use the contact page to send me emails about projects you want to see me make.</p>
+        <p>This is my website where I post most of the things I code. I develop games, websites, and have been at it for several years.<br><br>To navigate the website use the buttons in the top right of the screen. Use the contact page to send me emails about projects you want to see me make.</p>
       </div>
     </section>
 
